po: update po/es_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/common-base.po
+++ b/po/es_ES/common-base.po
@@ -42,7 +42,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-24 15:56+0000\n"
+"PO-Revision-Date: 2016-08-25 11:18+0000\n"
 "Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -26021,7 +26021,7 @@ msgid ""
 "Your database is configured to use the MyISAM database engine. CiviCRM "
 "requires InnoDB. You will need to convert any MyISAM tables in your database"
 " to InnoDB. Using MyISAM tables will result in data integrity issues."
-msgstr ""
+msgstr "Su base de datos está configurada para usar el motor de bases de datos MyISAM. CiviCRM requiere InnoDB. Necesitará convertir todas las tablas MyISAM de su base de datos a InnoDB. Usar tablas MyISAM generará problemas de integridad de datos. "
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "MyISAM Database Engine"
@@ -26074,36 +26074,36 @@ msgstr "Estado del sistema: OK"
 #: CRM/Utils/Rule.php
 msgid ""
 "%1: Please check that your date range is in correct chronological order."
-msgstr ""
+msgstr "%1: Por favor revise que su rango de fecha tenga un orden cronológico correcto."
 
 #: CRM/Utils/System/Backdrop.php
 msgid "The e-mail address %1 is not valid."
-msgstr ""
+msgstr "Dirección de correo electrónico %1 no es válida"
 
 #: CRM/Utils/System/Backdrop.php CRM/Utils/System/Drupal.php
 #: CRM/Utils/System/Joomla.php CRM/Utils/System/WordPress.php
 msgid ""
 "The email address %1 already has an account associated with it. <a "
 "href=\"%2\">Have you forgotten your password?</a>"
-msgstr ""
+msgstr "La dirección de correo electrónico %1 ya tiene una cuenta asociada. <a href=\"%2\">Ha olvidado su contraseña?</a>"
 
 #: CRM/Utils/System/Drupal6.php
 msgid ""
 "This email %1 already has an account associated with it. Please select "
 "another email."
-msgstr ""
+msgstr "El correo electrónico %1 ya tiene una cuenta asociada. Por favor, seleccione otro correo electrónico."
 
 #: ang/crmUi.js
 msgid "Hello"
-msgstr ""
+msgstr "Hola"
 
 #: js/crm.insert-shortcode.js
 msgid "Insert"
-msgstr ""
+msgstr "Insertar"
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
-msgstr ""
+msgstr "(Copiar)"
 
 #: templates/CRM/ACL/Header.tpl
 msgid ""
@@ -26112,7 +26112,7 @@ msgid ""
 "data</strong> that the operation can be performed on (e.g. a group of "
 "contacts), and a <strong>Role</strong> that has permission to do this "
 "operation. Refer to the %1 for more info."
-msgstr ""
+msgstr "Las ACLs permiten controlar el acceso a los datos de CiviCRM. Una ACL se compone de una <strong>operación</strong> (P ej. \"Ver\" o \"Editar\"), un <strong>conjunto de datos</strong> sobre los que la operación se puede realizar (P ej. un grupo de contactos), y un <strong>Rol</strong> que tiene permiso para realizar la operación. Para obtener más información consulte %1."
 
 #: templates/CRM/Contact/Form/Domain.tpl
 msgid ""
@@ -26121,43 +26121,43 @@ msgid ""
 "This token may also be used in regular 'Email - send now' messages and in "
 "other Message Templates. The token is replaced by the address entered below "
 "when the message is sent."
-msgstr ""
+msgstr "Los envíos de correo de CiviMail deben incluir la dirección de la organización que realiza el envío. Esto se hace poniendo el código -token- %1 en el cuerpo o pie de la página del mensaje. Este código -token- también se puede utilizar en los mensajes regulares \"enviar correo electrónico a contactos\" y en otras plantillas de mensajes. El código -token- se sustituirá por la dirección ingresada abajo, en el momento en que se envíe el mensaje."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid ""
 "WARNING: There are %1 user accounts associated with both the original and duplicate contacts. Ensure that the %1 user you want to retain is on the right - if necessary use the 'Flip between original and duplicate contacts.' option at top to swap the positions of the two records before doing the merge.\n"
 "  The user record associated with the duplicate contact will not be deleted, but will be unlinked from the associated contact record (which will be deleted).\n"
 "  You will need to manually delete that user (click on the link to open the %1 user account in new screen). You may need to give thought to how you handle any content or contents associated with that user."
-msgstr ""
+msgstr "ATENCIÓN: Existen %1 cuentas de usuario asociadas con el contacto original y con el duplicado. Asegúrese de que el usuario %1 que quiere mantener está a la derecha - si es necesario utilice la opción de 'intercambiar entre el original y el duplicado' cara cambiar las posiciones de los 2 contactos antes de combinarlos.\nEl usuario asociado con el contacto duplicado no será eliminado, pero será desvinculado del contacto (que será eliminado).\nNecesitará borrar manualmente el usuario (haga clic en el enlace para abrir el usuario %1 en una nueva pantalla). Tal vez necesite revisar los contenidos asociados con el usuario antes de eliminarlo."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "Show/hide rows with the same data on each contact record."
-msgstr ""
+msgstr "Mostrar / ocultar filas con los mismos datos en cada contacto."
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "overwrite"
-msgstr ""
+msgstr "sobreescribir"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "match"
-msgstr ""
+msgstr "coincidencia"
 
 #: templates/CRM/Contact/Form/Merge.tpl
 msgid "migrate"
-msgstr ""
+msgstr "migrar"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
 "When multiple options are selected within a search field the selections are combined using <strong>OR</strong> criteria (e.g. selecting both 'Group A' and 'Group B' will find contacts who are either in 'Group A' OR 'Group B' or in both).</p>\n"
 "  <p>By default the different search fields are combined using the <strong>AND</strong> Search Operator (e.g. selecting Tag is 'Age' AND Country is 'Canada' returns only those contacts who meet both criteria). You can override the Search Operator default for combining different fields in the Search Settings."
-msgstr ""
+msgstr "Cuando múltiples opciones son seleccionadas dentro de un campo de una búsqueda, esas opciones son combinadas con el criterio <strong>O</strong> (por ejemplo seleccionando 'Grupo A' y 'Grupo B' se buscará contactos que están en el 'Grupo A' O en el 'Grupo B' o en ambos).</p>\n<p>Por defecto los campos de búsqueda son combinados utilizando el operador <strong>Y</strong> (por ejemplo si se elige una etiqueta Y que el país sea 'Canada' se mostrarán solo los contactos que cumplan ambas condiciones). Puede sobrescribir el operador de búsqueda por defecto para combinar distintos campos en la configuración de la búsqueda."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
 "If you've changed search criteria for this 'smart group' and want to save "
 "your changes, select <strong>Group - update smart group</strong> from the '-"
 " more actions -' drop-down menu"
-msgstr ""
+msgstr "Si ha cambiado los criterios de búsqueda de este \"grupo inteligente\" y quiere guardar los cambios, seleccione <strong> actualizar grupo inteligente </ strong> en \"más acciones\" en el menú desplegable."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -26166,59 +26166,59 @@ msgid ""
 "contact fields and then selecting that Profile here. For example you may "
 "want to include columns for Gender and Date of Birth, while eliminating "
 "Country."
-msgstr ""
+msgstr "Si está mostrando los resultados de la búsqueda como contactos, puede modificar las columnas que se muestran creando un Perfil que contenga un conjunto de campos diferente. Una vez creado el Perfil deberá seleccionarlo aquí para que los campos se muestren como columnas en los resultados de la búsqueda."
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 msgid "Display Settings For Results"
-msgstr ""
+msgstr "Configuración de visualización para resultados"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Downloading..."
-msgstr ""
+msgstr "Descargando..."
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Filter Contacts"
-msgstr ""
+msgstr "Filtrar contactos"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Contact 2"
-msgstr ""
+msgstr "Contacto 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Email 1"
-msgstr ""
+msgstr "Email 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 1"
-msgstr ""
+msgstr "Calle 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Street Address 2"
-msgstr ""
+msgstr "Calle 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 1"
-msgstr ""
+msgstr "Código postal 1"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode 2"
-msgstr ""
+msgstr "Código postal 2"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Post Code"
-msgstr ""
+msgstr "Código postal"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Conflicts"
-msgstr ""
+msgstr "Conflictos"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Within Selections"
-msgstr ""
+msgstr "En las selecciones"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Postcode"
-msgstr ""
+msgstr "Código postal"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Force Merge Selected Duplicates"
@@ -26230,7 +26230,7 @@ msgid ""
 "operation will run in force merge mode - all selected duplicates will be "
 "merged into main contacts even in case of any conflicts. Click OK to proceed"
 " if you are sure you wish to run this operation."
-msgstr ""
+msgstr "Este proceso combinará en lote los duplicados seleccionados. La operación se ejecutará en modo seguro - sólo los contactos sin conflictos de datos serán combinados. Haga click en OK para proceder si está seguro de ejecutar esta operación."
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Safe Merge Selected Duplicates"
@@ -26246,7 +26246,7 @@ msgstr "Este proceso combinará en lote los duplicados seleccionados. La operaci
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "List All Duplicates"
-msgstr ""
+msgstr "Mostrar todos los duplicados"
 
 #: templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Batch Merge Selected Duplicates"
@@ -26262,12 +26262,12 @@ msgstr "Intercambiar los duplicados seleccionados"
 
 #: templates/CRM/Core/Form/ShortCode.tpl
 msgid "Can't find your form? Make sure it is active."
-msgstr ""
+msgstr "¿No encuentra su formulario? Asegúrese de que está activo."
 
 #: templates/CRM/Custom/Form/Optionfields.tpl
 #: templates/CRM/Price/Form/OptionFields.tpl
 msgid "add another choice"
-msgstr ""
+msgstr "añada otra opción"
 
 #: templates/CRM/Custom/Import/Form/DataSource.hlp
 msgid ""
@@ -26278,21 +26278,21 @@ msgid ""
 "which is used to match each row to the corresponding (existing) CiviCRM "
 "contact record. NOTE: Contact IDs are included by default when exporting "
 "contacts from CiviCRM."
-msgstr ""
+msgstr "El archivo de la importación debe contener una línea para cada uno de los campos de información. Por ejemplo, si usted está importando el historial de empleo de un grupo de contactos, cada línea debe contener columnas para Empleazor, Fecha de comienzo, Fecha de finalización, y Posición. También necesitará una columna conteniendo el ID Interno de Contacto de CiviCRM ques es usado para unir cada linea con el correspondiente (ya existente) contacto en el record the CiviCRM. Nota: IDs de contactos están incluidas por defecto cuando se exporten los contactor de CiviCRM. "
 
 #: templates/CRM/Logging/ReportDetail.tpl
 msgid ""
 "This report can not be displayed because there are no relevant entries in "
 "the logging tables."
-msgstr ""
+msgstr "No se puede mostrar este informe porque todavía no hay entradas en las tablas de registro."
 
 #: templates/CRM/Price/Page/Option.tpl
 msgid "Maximum"
-msgstr ""
+msgstr "Máximo"
 
 #: templates/CRM/Profile/Page/MultipleRecordFieldsListing.tpl
 msgid "No records of type \\'%1\\' found."
-msgstr ""
+msgstr "No se han encontrado resultados del tipo '%1'"
 
 #: templates/CRM/UF/Form/Field.hlp
 msgid ""
@@ -26300,21 +26300,21 @@ msgid ""
 "it visible to the public and potentially searchable in the Profile Search "
 "form ('Expose Publicly' or 'Expose Publicly and for Listings')?  ('User and "
 "User Admin Only') fields can still be used for Edit and Create mode."
-msgstr ""
+msgstr "¿Está este campo oculto de búsquedas públicas ('Solo Usuario y Administrador') o está visible al público y buscable con un perfil de búsqueda ('Exponer públicamente' o 'Exponer públicamente y para listados')? Los campos ('Solo Usuario y Administrador') pueden utilizarse para los modos de edición y creación."
 
 #: templates/CRM/UF/Form/Field.hlp
 msgid ""
 "When visibility is 'Expose Publicly and for Listings', users can also click "
 "the field value when viewing a contact in order to locate other contacts "
 "with the same value(s) (i.e. other contacts who live in Poland)."
-msgstr ""
+msgstr "Cuando la visibilidad es \"Páginas públicas y listados\", los usuarios también pueden hacer clic en el valor del campo cuando ven un contacto para localizar otros contactos con los mismos valor(es) (P ej. otros contactos que viven en Polonia). "
 
 #: templates/CRM/UF/Page/Group.hlp
 msgid ""
 "The HTML Form Snippet code will display a form consisting of the active "
 "fields in this Profile. You can copy this HTML code and paste it into any "
 "block or page on your website where you want to collect contact information."
-msgstr ""
+msgstr "El código del formulario HTML mostrará un formulario que consta de los campos activos en este perfil. Puede copiar este código HTML y pegarlo en cualquier bloque o página de CUALQUIER página web en la que desee obtener información de contacto."
 
 #: templates/CRM/UF/Page/Group.hlp
 msgid ""
@@ -26324,30 +26324,30 @@ msgid ""
 " to "
 "\"https://yourdomain.com/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\")"
 " you will be able to use the snippet on any website."
-msgstr ""
+msgstr "Al cambiar las direcciones URL relativas incluidas en el código a absolutas (por ejemplo de \"/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\" a \"https://yourdomain.com/sites/all/modules/civicrm/bower_components/jquery/dist/jquery.min.js?r=dXCgD\") podría utilizar el perfil en cualquier sitio web."
 
 #: templates/CRM/UF/Page/Group.tpl
 msgid ""
 "The HTML code below will display a form consisting of the active fields in "
 "this Profile. You can copy this HTML code and paste it into any block or "
 "page on your website where you want to collect contact information."
-msgstr ""
+msgstr "El siguiente código HTML mostrará un formulario consistente en los campos activos en este perfil. Puede copiar este código HTML y pegarlo dentro de cualquier bloque o página en CUALQUIER sitio web desde donde quiera obtener información de contactos."
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Showing %1 to %2 of %3 entries"
-msgstr ""
+msgstr "Mostrando %1 a %2 de %3 entradas"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "(filtered from %1 total entries)"
-msgstr ""
+msgstr "(filtrado de %1 entradas totales)"
 
 #: templates/CRM/common/l10n.js.tpl
 msgid "Show %1 entries"
-msgstr ""
+msgstr "Mostrar %1 entradas"
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
-msgstr ""
+msgstr "La base de datos será actualizada de %1 a %2."
 
 #: templates/CRM/common/success.tpl
 msgid ""
@@ -26359,15 +26359,15 @@ msgid ""
 "you to join their ranks by <a href=\"%3\">becoming a member of CiviCRM "
 "today</a>. There is no better way to say thanks than to support those that "
 "have made CiviCRM 4.7 possible. <a href=\"%3\">Join today</a>."
-msgstr ""
+msgstr "Gracias por actualizar a la versión 4.7, la última versión de CiviCRM. Con nuevas funcionalidades y mejoras, esta versión ha sido posible gracias al  <a href=\"%1\">equipo de CiviCRM</a> y a un increíble número de  <a href=\"%2\">contribuyentes</a>, combinado con el apoyo económico de los miembros de CiviCMR y los partners quien sin ellos el proyecto no existiría. Le invitamos a disfrutar de las mejoras incluidas en esta versión y a <a href=\"%2\" target=\"_blank\">hacerse miembro</a> o <a href=\"%3\" target=\"_blank\">realizar una donación</a>."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Payment Methods"
-msgstr ""
+msgstr "Formas de pago"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Relative Date Filters"
-msgstr ""
+msgstr "Filtros de fecha relativas"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Contact Deleted by Merge"
@@ -26379,16 +26379,16 @@ msgstr "El contacto ha sido combinado en otro contato"
 
 #: xml/templates/civicrm_data.tpl CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Chargeback"
-msgstr ""
+msgstr "Devolución de cargo"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Activity Details Report"
-msgstr ""
+msgstr "Reporte de detalle de actividades"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Provides a detailed report for your walk/phonelist for targeted contacts"
-msgstr ""
+msgstr "Provee un reporte detallado de la lista su teléfono / recorrido para los contactos seleccionados"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Detail Report"
