--- a/po/tr_TR/install.po
+++ b/po/tr_TR/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 08:00+0000\n"
+"PO-Revision-Date: 2016-08-25 09:39+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -289,13 +289,13 @@ msgstr "CiviCRM şu sorunlar nedeniyle yüklenemiyor:"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr "PHP %1 ya da üzerindeki sürümler gereklidir. Yüklü sürüm %2. Lütfen sunucunuzu güncelleyin ya da servis sağlayıcınızdan sizin için bu işlemi yapmasını isteyin."
+msgstr "PHP %1 ya da üzerindeki sürümler gereklidir. Yüklü sürüm %2. Lütfen sunucunuzu güncelleyin ya da hizmet sağlayıcınızdan sizin için bu işlemi yapmasını isteyin."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr "PHP %1 sürümü desteklenmiyor. PHP %2 ya da önceki bir sürüm gereklidir. Sunucu sürümünüzü değiştirin ya da servis sağlayıcınızdan sizin için bu işlemi yapmasını isteyin."
+msgstr "PHP %1 sürümü desteklenmiyor. PHP %2 ya da önceki bir sürüm gereklidir. Sunucu sürümünüzü değiştirin ya da hizmet sağlayıcınızdan sizin için bu işlemi yapmasını isteyin."
 
 #: install/index.php
 msgid "file '%1' not found"
@@ -527,7 +527,7 @@ msgid ""
 "and password to connect to the server here.  If this account has permission "
 "to create databases, then we will create the database for you; otherwise, "
 "you must give the name of a database that already exists."
-msgstr "CiviCRM, içeriklerini bir MySQL veritabanına kaydeder. Bağlanılacak sunucunun kullanıcı adı ve parolasını buraya yazın. Bu hesabın veritabanı oluşturma yetkisi varsa, veritabanı da kendiliğinden oluşturulur. Kullanıcının bu yetkisi yoksa bir veritabanı oluşturup adını buraya yazın."
+msgstr "CiviCRM, içeriklerini bir MySQL veritabanına kaydeder. Bağlanılacak sunucunun kullanıcı adı ve parolasını buraya yazın. Bu hesabın veritabanı oluşturma yetkisi varsa, veritabanı otomatik olarak oluşturulur. Kullanıcının bu yetkisi yoksa bir veritabanı oluşturup adını buraya yazın."
 
 #: install/template.html
 msgid ""
