po: update po/tr_TR/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/common-components.po
+++ b/po/tr_TR/common-components.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:31+0000\n"
+"PO-Revision-Date: 2016-08-25 09:12+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1476,7 +1476,7 @@ msgid ""
 "Select the \"FROM\" Email Address for this mailing from the dropdown list. "
 "Available email addresses are configurable by users with Administer CiviCRM "
 "permission. EXAMPLE: \"Client Services\" &lt;clientservices@example.org&gt;"
-msgstr "Açılan kutudan, bu postalama için kullanılacak \"KİMDEN\" adresini seçin. Kullanılabileek e-posta adresleri, CiviCRM Yönetici izinlerine sahip kullanıcılar tarafından ayarlanabilir. Örnek: \"Müşteri Hizmetleri\" &lt;musterihizmetleri@websitem.org&gt;"
+msgstr "Açılan kutudan, bu postalama için kullanılacak \"GÖNDEREN\" adresini seçin. Kullanılabilecek e-posta adresleri, CiviCRM Yönetici izinlerine sahip kullanıcılar tarafından ayarlanabilir. Örnek: \"Müşteri Hizmetleri\" &lt;musterihizmetleri@websitem.org&gt;"
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1484,14 +1484,14 @@ msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; Communications &raquo; FROM "
 "Email Addresses</a> to add or edit email addresses. Make sure these email "
 "addresses are valid email accounts with your email service provider."
-msgstr "E-posta adresleri eklemek ya da düzenlemek için <a href='%1'>CiviCRM &raquo; İletişim &raquo; KİMDEN E-posta Adresleri Yönetimi</a> bölümüne gidin. Bu adreslerin geçerli ve kullanılabilir olduğundan emin olun."
+msgstr "E-posta adresleri eklemek ya da düzenlemek için <a href='%1'>CiviCRM &raquo; İletişim &raquo; GÖNDEREN E-posta Adresleri Yönetimi</a> bölümüne gidin. Bu adreslerin geçerli ve kullanılabilir olduğundan emin olun."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "Contact your site administrator if you need to use a \"FROM\" Email Address "
 "which is not in the dropdown list."
-msgstr "Açılan kutuda bulunmayan bir \"KİMDEN\" e-posta adresi eklemek için site yöneticisi ile görüşün."
+msgstr "Açılan kutuda bulunmayan bir \"GÖNDEREN\" e-posta adresi eklemek için site yöneticisi ile görüşün."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
@@ -1507,7 +1507,7 @@ msgid ""
 "If you create only an <strong>HTML</strong> version, CiviMail will "
 "automatically create a <strong>TEXT</strong> version for your recipients who"
 " have chosen NOT to receive HTML email."
-msgstr "İletiyi yalnız <strong>HTML</strong> biçiminde oluşturursanız, CiviMail, e-postaları HTML biçiminde almak istemediğini belirtmiş alıcılar için kendiliğinden iletinin <strong>METİN</strong> biçimini de oluşturur."
+msgstr "İletiyi yalnız <strong>HTML</strong> biçiminde oluşturursanız, e-postaları HTML biçiminde almak istemediğini belirtmiş alıcılar için <strong>METİN</strong> biçimi CiviMail tarafından otomatik olarak oluşturulur."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp templates/CRM/Mailing/MailingUI.hlp
