--- a/po/tr_TR/case.po
+++ b/po/tr_TR/case.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:36+0000\n"
+"PO-Revision-Date: 2016-08-25 09:32+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -51,7 +51,7 @@ msgstr "KİME: alanındaki olay kodu geçersiz (%1)."
 #: CRM/Case/BAO/Case.php
 msgid ""
 "FROM email contact %1 doesn't have a relationship to the referenced case."
-msgstr "%1 KİMDEN e-posta kişisinin belirtilen olay ile ilgisi yok."
+msgstr "%1 GÖNDEREN e-posta kişisinin belirtilen olay ile ilgisi yok."
 
 #: CRM/Case/BAO/Case.php
 msgid "Role in Case"
@@ -383,7 +383,7 @@ msgstr "- herhangi bir durum -"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Activity Dates - From"
-msgstr "İşlem Tarihleri - Kimden"
+msgstr "İşlem Tarihleri - Başlangıç"
 
 #: CRM/Case/Form/CaseView.php
 msgid "Deleted Activities"
@@ -811,7 +811,7 @@ msgid ""
 "It will not be used for any purpose other than to help you, and for any "
 "other purpose that you authorize in writing, or which is required by "
 "law.&quot;"
-msgstr "&quot;Bize ya da temsilcilerimiz ile hizmet sağlacılarımıza vereceğiniz tüm bilgiler güvenli olarak korunur. Kullanılmasına izin verdiğiniz şekilde ve kanunlar çerçevesinde, size yardımcı olmak dışında herhangi bir amaçla kullanılmaz.&quot;"
+msgstr "&quot;Bize ya da temsilcilerimiz ile hizmet sağlayıcılarımıza vereceğiniz tüm bilgiler güvenli olarak korunur. Kullanılmasına izin verdiğiniz şekilde ve kanunlar çerçevesinde, size yardımcı olmak dışında herhangi bir amaçla kullanılmaz.&quot;"
 
 #: templates/CRM/Case/Form/Case.hlp
 msgid "&quot;Please tell me what you would like to discuss.&quot;"
