po: update po/tr_TR/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/mailing.po
+++ b/po/tr_TR/mailing.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-27 06:31+0000\n"
+"PO-Revision-Date: 2016-08-25 09:16+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -223,11 +223,11 @@ msgstr "Postalama Türü"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
-msgstr "Postalama Kimden Adı"
+msgstr "Postalama Gönderen Adı"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Email"
-msgstr "Postalama Kimden E-posta Adresi"
+msgstr "Postalama Gönderen E-posta Adresi"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Replyto Email"
@@ -858,7 +858,7 @@ msgstr "Yazığınız %1 e-posta adresi abonelikten ayrılma isteğindeki e-post
 msgid ""
 "There is no valid from email address present. You can add here <a "
 "href='%1'>Add From Email Address.</a>"
-msgstr "Henüz geçerli bir kimden e-posta adresi eklenmemiş. <a href='%1'>Buradan ekleyebilirsiniz</a>. "
+msgstr "Henüz geçerli bir e-posta gönderme adresi eklenmemiş. <a href='%1'>Buradan ekleyebilirsiniz</a>. "
 
 #: CRM/Mailing/Form/Upload.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailing/EmailAddrCtrl.js ang/crmMailingAB/BlockMailing.html
@@ -999,7 +999,7 @@ msgstr "Farklı \"Konu\" satırları sınansın"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test different \"From\" lines"
-msgstr "Farklı \"Kimden\" satırları sınansın"
+msgstr "Farklı \"Gönderen\" satırları sınansın"
 
 #: CRM/Mailing/PseudoConstant.php ang/crmMailingAB/services.js
 msgid "Test entirely different emails"
@@ -1564,11 +1564,11 @@ msgstr "Kalıp (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (A)"
-msgstr "Kimden (A)"
+msgstr "Gönderen (A)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "From (B)"
-msgstr "Kimden (B)"
+msgstr "Gönderen (B)"
 
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Reply-To (A)"
@@ -2096,7 +2096,7 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body will be "
 "automatically re-written to route through your CiviCRM server prior to "
 "redirecting to the target page."
-msgstr "Not: Bu özellik etkinleştirildiğinde, ileti metnindeki tüm bağlantılar kendiliğinden değiştirilir ve doğrudan hedef sayfaya yönlendirilmek yerine CiviCRM sunucusuna yönlendirildikten sonra hedef sayfanın açılması sağlanır."
+msgstr "Not: Bu özellik etkinleştirildiğinde, ileti metnindeki tüm bağlantılar otomatik olarak değiştirilir ve doğrudan hedef sayfaya yönlendirilmek yerine CiviCRM sunucusuna yönlendirildikten sonra hedef sayfanın açılması sağlanır."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2114,7 +2114,7 @@ msgstr "Alıcıların yanıtları göndericinin adresine değil belirli bir Civi
 msgid ""
 "If a recipient replies to this mailing, forward the reply to the FROM Email "
 "address specified for the mailing."
-msgstr "Bir alıcı bu e-postayı yanıtladığında, yanıt iletisi postalama için kullanılan KİMDEN e-posta adresine iletilir."
+msgstr "Bir alıcı bu e-postayı yanıtladığında, yanıt iletisi postalama için kullanılan GÖNDEREN e-posta adresine iletilir."
 
 #: templates/CRM/Mailing/Form/Settings.tpl templates/CRM/Mailing/MailingUI.hlp
 msgid ""
@@ -2614,4 +2614,4 @@ msgid ""
 "NOTE: When this feature is enabled, all links in the message body (including"
 " mailtos) will be automatically re-written to route through your CiviCRM "
 "website prior to redirecting to the target page."
-msgstr "Not: Bu özellik etkinleştirildiğinde, ileti metnindeki tüm bağlantılar kendiliğinden değiştirilir (mailto bağlantıları da) ve doğrudan hedef sayfaya yönlendirilmek yerine CiviCRM web sitenize yönlendirildikten sonra hedef sayfanın açılması sağlanır."
+msgstr "Not: Bu özellik etkinleştirildiğinde, ileti metnindeki tüm bağlantılar otomatik olarak değiştirilir (mailto bağlantıları da) ve doğrudan hedef sayfaya yönlendirilmek yerine CiviCRM web sitenize yönlendirildikten sonra hedef sayfanın açılması sağlanır."
