po: update po/tr_TR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/menu.po
+++ b/po/tr_TR/menu.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:36+0000\n"
+"PO-Revision-Date: 2016-08-25 09:40+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -483,7 +483,7 @@ msgstr "Anlık İletişim Hizmetleri"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mobile Phone Providers"
-msgstr "Mobil Servis Sağlayıcılar"
+msgstr "Mobil Hizmet Sağlayıcılar"
 
 msgctxt "menu"
 msgid "Phone Type"
@@ -527,7 +527,7 @@ msgstr "Organizasyon Adres ve İlgili Bilgileri"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "From Email Addresses"
-msgstr "Kimden E-posta Adresleri"
+msgstr "E-posta Gönderme Adresleri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -537,7 +537,7 @@ msgstr "İleti Kalıpları"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Schedule Reminders"
-msgstr "Anımsatıcıları Zamanlayın"
+msgstr "Zamanlanmış Anımsatıcılar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -641,7 +641,7 @@ msgstr "Haritalama ve Koordinatlar"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Misc (Undelete, PDFs, Limits, Logging, Captcha, etc.)"
-msgstr "Diğer (Geri Alma, PDF, Sınırlar, Günlük, Güvenlik Kodu, vb)"
+msgstr "Diğer (Kurtarma, PDF, Sınırlar, Günlük, Güvenlik Kodu ...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -746,7 +746,7 @@ msgstr "Fiyat Alanı Seçenekleri"
 
 msgctxt "menu"
 msgid "Sms Providers"
-msgstr "SMS Sağlayıcılar"
+msgstr "SMS Hizmeti Sağlayıcılar"
 
 msgctxt "menu"
 msgid "New Mass SMS"
@@ -1084,7 +1084,7 @@ msgstr "Konferans Aralığı Etiketleri"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Participants"
-msgstr "Katılımcı Arama"
+msgstr "Katılımcı Arayın"
 
 msgctxt "menu"
 msgid "Print Event Name Badge"
@@ -1587,7 +1587,7 @@ msgstr "İletişim"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "FROM Email Addresses"
-msgstr "KİMDEN E-posta Adresleri"
+msgstr "GÖNDEREN E-posta Adresleri"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1642,7 +1642,7 @@ msgstr "Hata Ayıklama ve Hata İşleme"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "SMS Providers"
-msgstr "SMS Sağlayıcıları"
+msgstr "SMS Hizmeti Sağlayıcılar"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1717,12 +1717,12 @@ msgstr "Belgeler"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr "Soru sorun"
+msgstr "Soru Sorun"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr "Uzmandan yardım alın"
+msgstr "Uzman Yardımı Alın"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1732,7 +1732,7 @@ msgstr "CiviCRM Hakkında"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr "Sitenizi kaydedin"
+msgstr "Sitenizi Kayıt Edin"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
