po: update po/tr_TR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/report.po
+++ b/po/tr_TR/report.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:37+0000\n"
+"PO-Revision-Date: 2016-08-25 09:15+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -1899,7 +1899,7 @@ msgid ""
 "Subject of the email containing the report, as well as the recipient list "
 "(To and Cc fields). Separate multiple 'To' or 'CC' email addresses with "
 "commas."
-msgstr "Bu raporun bir kopyası, kendiliğinden oluşturularak, belirtilen e-posta adreslerine gönderilebilir. Bu bölümdeki ayarlar kullanılarak, raporu içeren e-postasının konusu ile alıcı listesi (Kime ve Kopya alanları) belirtilebilir. Birden çok 'Kime' ya da 'Kopya' adresini virgül ile ayırarak yazın."
+msgstr "Bu raporun bir kopyası, otomatik olarak oluşturularak, belirtilen e-posta adreslerine gönderilebilir. Bu bölümdeki ayarlar kullanılarak, raporu içeren e-postasının konusu ile alıcı listesi (Kime ve Kopya alanları) belirtilebilir. Birden çok 'Kime' ya da 'Kopya' adresini virgül ile ayırarak yazın."
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
