po: update po/tr_TR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/tr_TR/member.po
+++ b/po/tr_TR/member.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-25 01:37+0000\n"
+"PO-Revision-Date: 2016-08-25 09:16+0000\n"
 "Last-Translator: Kaya Zeren <kayazeren@gmail.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/civicrm/civicrm/language/tr/)\n"
 "MIME-Version: 1.0\n"
@@ -42,7 +42,7 @@ msgstr "Lütfen bir üyelik seçin."
 
 #: CRM/Member/BAO/Membership.php
 msgid "Please renew my membership automatically."
-msgstr "Üyeliğim kendiliğinden yenilensin."
+msgstr "Üyeliğim otomatik olarak yenilensin."
 
 #: CRM/Member/BAO/Membership.php
 msgid "do not import"
@@ -121,11 +121,11 @@ msgstr "Deneme Üyeliği"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew"
-msgstr "Üyelik Kendiliğinden Yenileniyor"
+msgstr "Üyelik Otomatik Yenileniyor"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is NOT Auto-Renew"
-msgstr "Üyelik Kendiliğinden YenilenMİYOR"
+msgstr "Üyelik Otomatik YenilenMİYOR"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Pay Later"
@@ -157,7 +157,7 @@ msgstr "Sonradan Ödeme"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew?"
-msgstr "Kendiliğinden Yenileme"
+msgstr "Otomatik Yenileme"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is a Test?"
@@ -367,7 +367,7 @@ msgstr "Henüz ayarlanmış bir üyelik durumu yok. Üyelik durumları doğru ş
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Membership renewed automatically"
-msgstr "Üyelik kendiliğinden yenileniyor"
+msgstr "Üyelik otomatik yenileniyor"
 
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipType.php
 #: templates/CRM/Member/Form/MembershipView.tpl
@@ -576,7 +576,7 @@ msgstr "Seçenek sunulsun"
 #: templates/CRM/Member/Form/MembershipView.tpl
 #: templates/CRM/Member/Form/Selector.tpl templates/CRM/Member/Page/Tab.tpl
 msgid "Auto-renew"
-msgstr "Kendiliğinden yenileme"
+msgstr "Otomatik yenileme"
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid "Membership Types Default"
@@ -1064,7 +1064,7 @@ msgid ""
 "WARNING: If you cancel the recurring contribution associated with this "
 "membership, the membership will no longer be renewed automatically. However,"
 " the current membership status will not be affected."
-msgstr "UYARI: Bu üyelik ile ilişkili yenilenen katkıyı iptal ederseniz, üyelik artık kendiliğinden yenilenmez. Bununla birlikte geçerli üyelik durumu etkilenmez."
+msgstr "UYARI: Bu üyelik ile ilişkili yenilenen katkıyı iptal ederseniz, üyelik artık otomatik olarak yenilenmez. Bu değişiklik geçerli üyelik durumunu etkilemez."
 
 #: CRM/Member/Page/Tab.php
 msgid "Cancel Auto Renew Subscription"
@@ -1179,7 +1179,7 @@ msgstr "Bu kişinin ilk kez üye olduğu tarih"
 msgid ""
 "First day of current continuous membership period. Start Date will be "
 "automatically set based on Membership Type if you don't select a date."
-msgstr "Süren üyelik döneminin ilk günü. Bir tarih seçilmez ise başlangıç tarihi, seçilen üyelik türüne göre kendiliğinden atanır."
+msgstr "Süren üyelik döneminin ilk günü. Bir tarih seçilmez ise, başlangıç tarihi seçilen üyelik türüne göre otomatik olarak atanır."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Over-ride end date"
@@ -1189,7 +1189,7 @@ msgstr "Bitiş tarihi değiştirilsin"
 msgid ""
 "Latest membership period expiration date. End Date will be automatically set"
 " based on Membership Type if you don't select a date."
-msgstr "Süren üyelik döneminin son günü. Bir tarih seçilmez ise bitiş tarihi, seçilen üyelik türüne göre kendiliğinden atanır."
+msgstr "Süren üyelik döneminin son günü. Bir tarih seçilmez ise, bitiş tarihi seçilen üyelik türüne göre otomatik olarak atanır."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -1311,7 +1311,7 @@ msgid ""
 "With this configuration, the membership fee is automatically charged, and "
 "users have an option to make an additional contribution (two separate "
 "payment transactions will be generated)."
-msgstr "Bu ayarlar ile üyelik ücreti kendiliğinden alınır ve kullanıcılara ek bir katkı yapabilecekleri bir seçenek sunulur (iki ayrı ödeme hareketi oluşturulur)."
+msgstr "Bu ayarlar ile üyelik ücreti otomatik olarak alınır ve kullanıcılara ek bir katkı yapabilecekleri bir seçenek sunulur (iki ayrı ödeme hareketi oluşturulur)."
 
 #: templates/CRM/Member/Form/MembershipBlock.hlp
 msgid ""
@@ -1641,7 +1641,7 @@ msgid ""
 "You will need to select and configure a supported payment processor "
 "(currently Authorize.Net, PayPal Pro, or PayPal Website Standard) in order "
 "to offer automatically renewing memberships."
-msgstr "Üyeliklerin kendiliğinden yenilenebilmesi için, desteklenen bir ödeme aracısı seçip ayarlamanız gerekir (şu anda Authorize.Net, PayPal Pro ya da PayPal Websitesi Standard)."
+msgstr "Üyeliklerin otomatik olarak yenilenebilmesi için, desteklenen bir ödeme aracısı seçip ayarlamanız gerekir (şu anda Authorize.Net, PayPal Pro ya da PayPal Websitesi Standard)."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
@@ -1685,7 +1685,7 @@ msgstr "Bu üyelik türü ile ilişkilendirilmiş üyelikler bulunduğundan bu i
 msgid ""
 "Memberships can be automatically granted to related contacts by selecting a "
 "Relationship Type."
-msgstr "Bir ilişki türü seçilerek üyeliklerin kendiliğinden ilişkili kişilere bağlanması sağlanabilir."
+msgstr "Bir ilişki türü seçilerek üyeliklerin otomatik olarak ilişkili kişilere bağlanması sağlanabilir."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
@@ -2025,7 +2025,7 @@ msgid ""
 "dates of a given membership. For example, the default <strong>Grace</strong>"
 " status rule says: 'assign Grace status if the membership period ended "
 "sometime within the past month.'"
-msgstr "CiviMember, kişilerin güncel üyelik durumlarını burada ayarlanan durum adları ve kurallarına göre kendiliğinden hesaplar. Durum 'kuralı', belirtilen üyelik için başlangıç ve bitiş tarihlerine göre hangi durumun atanacağını belirler. Örneğin varsayılan <strong>Ek Süre</strong> durum kuralı: 'üyelik süresi geçen ay içinde bittiyse' uygulanır."
+msgstr "CiviMember, kişilerin güncel üyelik durumlarını burada ayarlanan durum adları ve kurallarına göre otomatik olarak hesaplar. Durum 'kuralı', belirtilen üyelik için başlangıç ve bitiş tarihlerine göre hangi durumun atanacağını belirler. Örneğin varsayılan <strong>Ek Süre</strong> durum kuralı: 'üyelik süresi geçen ay içinde bittiyse' uygulanır."
 
 #: templates/CRM/Member/Page/MembershipStatus.tpl
 msgid ""
@@ -2049,7 +2049,7 @@ msgstr "Henüz özel bir üyelik durumu yok. <a href='%1'>Buradan ekleyebilirsin
 msgid ""
 "Use this field to configure Membership Types where memberships are "
 "automatically granted to related contacts. Examples:"
-msgstr "Bu alanı, üyeliklerin ilişkili kişiler ile kendiliğinden bağlandığı Üyelik Türlerini ayarlamak için kullanın.\nÖrnekler:"
+msgstr "Bu alanı, üyeliklerin ilişkili kişiler ile otomatik olarak bağlandığı Üyelik Türlerini ayarlamak için kullanın.\nÖrnekler:"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "Direct member is:"
@@ -2057,7 +2057,7 @@ msgstr "Doğrudan üye:"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "Membership is automatically granted to:"
-msgstr "Üyelik ile kendiliğinden bağlantı:"
+msgstr "Üyelik ile otomatik bağlantı:"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "a household"
@@ -2167,7 +2167,7 @@ msgid ""
 "your configured membership status rules. However, if you want to assign a "
 "status manually and bypass automated status setting, check this box. Then "
 "you can select from the available status options."
-msgstr "Üyelik durumu, normal olarak ayarladığınız üyelik durumu kurallarına göre kendiliğinden atanır. Bununla birlikte otomatik durum ayarlarının görmezden gelinerek el ile bir durum atanabilmesi için bu seçeneği işaretleyin. Ardından kullanılabilecek bir durum seçilebilir."
+msgstr "Üyelik durumu, normal olarak ayarladığınız üyelik durumu kurallarına göre otomatik olarak atanır. Bununla birlikte otomatik durum ayarlarının görmezden gelinerek el ile bir durum atanabilmesi için bu seçeneği işaretleyin. Ardından kullanılabilecek bir durum seçilebilir."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid ""
@@ -2252,7 +2252,7 @@ msgstr "Sizinle ilişkili bir üyelik kaydı bulunamadı."
 
 #: xml/templates/message_templates/membership_autorenew_billing_subject.tpl
 msgid "Membership Autorenewal Billing Updates"
-msgstr "Kendiliğinden Üyelik Yenileme Fatura Güncellemeleri"
+msgstr "Otomatik Üyelik Yenileme Fatura Güncellemeleri"
 
 #: xml/templates/message_templates/membership_autorenew_cancelled_html.tpl
 #: xml/templates/message_templates/membership_autorenew_cancelled_text.tpl
@@ -2265,7 +2265,7 @@ msgstr "Üyelik Bilgileri"
 
 #: xml/templates/message_templates/membership_autorenew_cancelled_subject.tpl
 msgid "Autorenew Membership Cancellation Notification"
-msgstr "Kendiliğinden Üyelik Yenileme İptali Bildirimi"
+msgstr "Otomatik Üyelik Yenileme İptali Bildirimi"
 
 #: xml/templates/message_templates/membership_offline_receipt_subject.tpl
 msgid "Membership Confirmation and Receipt"
@@ -2288,7 +2288,7 @@ msgstr "NO"
 msgid ""
 "This membership will be renewed automatically. You can cancel the auto-"
 "renewal option by visiting this web page: %1."
-msgstr "Bu üyelik kendiliğinden yenilenecek. Kendiliğinden yenileme seçeneğini iptal etmek için şuraya bakın: %1."
+msgstr "Bu üyelik otomatik yenilenecek. Otomatik yenileme seçeneğini iptal etmek için şuraya bakın: %1."
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
