--- a/po/de_DE/mailing.po
+++ b/po/de_DE/mailing.po
@@ -16,6 +16,7 @@
 # Jo <jo@caj-augsburg.de>, 2012
 # Martin Peth <peth@systopia.de>, 2014-2015
 # Moira Brülisauer <moosline@savvy.ch>, 2016
+# tosca <peter.wenzel@wienertafel.at>, 2016
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Ronny Weise <inactive+civi_uebersetzer@transifex.com>, 2013
@@ -29,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:51+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-08-26 07:15+0000\n"
+"Last-Translator: tosca <peter.wenzel@wienertafel.at>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -708,7 +709,7 @@ msgstr "Bitte bestätigen Sie Ihre Abmeldung"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Verify email address to opt out:"
-msgstr "Bitte bestätigen Sie die E-Mailadresse, die abgemeldet werden soil"
+msgstr "Bitte bestätigen Sie die E-Mailadresse, die abgemeldet werden soll"
 
 #: CRM/Mailing/Form/Optout.php
 msgid "Email address is required to opt out."
